Update endpoints to use jwt
